# Metal

./: .gitignore  BC.py  CMakeLists.txt  README.MD  Untitled1.ipynb  Untitled2.ipynb  __init__.py  autotest.ipynb  cs231.ipynb  cython.ipynb  multiprocess.ipynb  profiling.ipynb  r.txt  requirement.txt  review1.py  setup.py
_autograd/src/: main.cpp
autograd/: README.MD  act.py  custom_function_operations.py  dependency.py  engin.py  functions.py  grad_check.py  graph.py  layer.py  linear.py  loss.py  math_operations.py  mini_batch.py  module.py  nn.py  node.py  optim.py  parameter.py  tensor.py  tensor_modifications.py  tensorbase.py
cpp/: README.MD
cpp/src/: main.cpp  main1.cpp
cpp/tensor/: functions.cpp  tensor.cpp  tensor.hpp
deprecated/: README.md  nn.py
deprecated/autograd/: README.MD
deprecated/autogradgpu/: README.MD
deprecated/examples/: Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  cnn_example.ipynb
deprecated/examples/.ipynb_checkpoints/: Untitled1-checkpoint.ipynb  Untitled2-checkpoint.ipynb  cnn_example-checkpoint.ipynb
deprecated/metal/_/: conv2D.py
deprecated/metal/layers/: conv2D.py  dense.py
deprecated/tests/: layer_conv2D_.py  layer_dense_.py  layer_dense_test.py  leakyrelu_test.py  relu_test.py  sigmoid_test.py  test_nn.py  test_tensor_add.py  test_tensor_max.py  test_tensor_mul.py  test_tensor_reshape.py  test_tensor_slice.py  test_tensor_sum.py  test_tensor_transpose.py
deprecated/tests/examples/: minimize_a_function.py
examples/: Untitled.ipynb  cnn_example.ipynb  randomdata.ipynb  test.py
examples/.ipynb_checkpoints/: cnn_example-checkpoint.ipynb
experimental/: layers.py  module.py  optimizers.py  parameter.py  pyth.py  t.py  tensor.py  tensorbase.py  tt.py
experimental/src/: functions.py
framework/: tensor.py  test-tensor.py
framework/.ipynb_checkpoints/: basic-test-checkpoint.ipynb
framework/.pytest_cache/v/cache/: lastfailed
metal/: act.py  activation_functions.py  cel.py  conv2D.py  custom_function_operations.py  dense.py  flatten.py  function.py  functions.py  layer.py  layers.py  linear.py  loss.py  loss_functions.py  module.py  nn.py  optim.py  optimizers.py  parameter.py  tensor.py
metal/activations/: activation.py
metal/autograd/: README.MD  __init__.py  load_autograd.py
metal/backend/: README.MD  numpy_backend.py
metal/core/: _01_base.py  __init__.py  callbacks.py  datagetter.py  dataloader.py  extend.py  imports.py  optimizer.py  samplers.py  steppers.py  transform.py  utils.py
metal/core/autograd/: __init__.py  load_autograd.py  readme.md
metal/core/inits/: __init__.py  weight_inits.py
metal/core/kernels/functions/: functional.py  loss.py
metal/core/layers/: __init__.py  activations.py  conv2d.py  dense.py  dropout.py  flatten.py  maxpoolnd.py  simple.py  utils.py
metal/initializers/: activation_init.py  optimizer_init.py  scheduler_init.py  weight_init.py
metal/layers/: activation_functions.py  batchnormalization_.py  conv2D.py  dense.py  dropout.py  flatten.py  layer.py  maxpool2d.py  pooling.py  softmax.py
metal/learners/: neuralnetwork.py  sequential.py  solver.py
metal/losses/: loss.py  loss_functions.py
metal/models/: convnet.py  sequential.py  vgg.py
metal/models/pre_trained_weights/: vggloader.py
metal/module/: data_containers.py  module.py
metal/nn/: neuralnetwork.py
metal/optimizers/: optimizer.py  steppers.py
metal/schedulers/: scheduler.py
metal/utils/: data_manipulation.py  function.py  functional.py  functions.py  production_util.py  utils.py  weight_inits.py
metal/utils/data_loader/: data_loader.py
metal/utils/numba/: functions.py
test/: Untitled.ipynb  Untitled1.ipynb  activationtest.py  conv2dtest.py  densetest.py  maintest.py  optimizertest.py  schedulertest.py  testsolver.py  torch_models.py
test/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Untitled0-checkpoint.ipynb  Untitled2-checkpoint.ipynb
tests/: Untitled1.ipynb  fizz_buzz.py  grad_ch.ipynb  layer_Conv2d_test.py  layer_conv2D_.py  layer_dense_.py  layer_dense_test.py  layer_linear_test.py  leakyrelu_test.py  linear.py  mini_batch_alg.ipynb  minimize_a_function.py  r.ipynb  relu_test.py  sigmoid_test.py  simple_learned_function.py  tanh_test.py  test_tensor_add.py  test_tensor_div.py  test_tensor_exp.py  test_tensor_flatten.py  test_tensor_matmul.py  test_tensor_mul.py  test_tensor_pad.py  test_tensor_slice.py  test_tensor_sub.py  test_tensor_sum.py
tests/.ipynb_checkpoints/: grad_ch-checkpoint.ipynb  mini_batch_alg-checkpoint.ipynb
trash/: Untitled.ipynb  act.py  benchmark.py  dropout.py  exp_test_lin.py  flatten.py  layer.py  mini_batch.py  mini_batch_alg.ipynb  module.py  nn.py  tensorbase.py
